chore(test): local testing scripts
