# gen/api/openapi.json
@@ -1463,6 +1463,10 @@
       },
       "cmd_server.SystemCapabilities": {
         "properties": {
+          "clusterScope": {
+            "description": "Displays cluster_scope: true or false",
+            "type": "boolean"
+          },
           "multiTenant": {
             "description": "Whether system supports multiple tenants",
             "type": "boolean"
